# aegis-relay

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bunfig.toml  package.json
.github/workflows/: ci.yml
circuits/: build.mjs  delivery.circom  flight.circom  package.json
circuits/lib/: constants.circom  geocell.circom  log_digest.circom  merkle_fixed.circom  safe_cmp.circom
circuits/test/: delivery.test.mjs  flight.test.mjs  parity.circom  parity.test.mjs
contracts-ct/: Cargo.toml  README.md
contracts-ct/token/: Cargo.toml
contracts/_staging/: groth16_verifier.rs
contracts/aegis-airspace/: Cargo.toml
contracts/aegis-common/: Cargo.toml
contracts/aegis-credentials/: Cargo.toml
contracts/aegis-registry/: Cargo.toml
contracts/aegis-registry/src/: groth16.rs  lib.rs  test.rs  test_fixtures.rs  test_fixtures_flight.rs
contracts/poseidon-merkle/: Cargo.toml
contracts/poseidon-merkle/src/: lib.rs  merkle.rs
dashboard/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/components/: CodeBlock.tsx  Footer.tsx  Hash.tsx  Nav.tsx  (+6 more)
docs/: DEMO-ARCHITECTURE.md  DEPLOYMENT.md  DESIGN.md  PIVOT.md  SUBMISSION.md  demo-script.md  testnet.md
fixtures/: parity.json
plans/: 001-onchain-role-binding.md  002-real-app-remove-demo-and-attacker.md  003-role-selection-modal-and-switch-gating.md  004-wire-confidential-rail.md  README.md
prover/: package-lock.json  package.json
(+191 files in other folders)
